introduzindo o modelo de mvc na aplicação

--- a/site/app/views/palestrantes/list.phtml
+++ b/site/app/views/palestrantes/list.phtml
@@ -11,16 +11,20 @@
                     <th class="text-center" scope="col">Foto</th>
                     <th class="text-center" scope="col">Nome</th>
                     <th class="text-center" scope="col">E-mail</th>
-                    <th class="text-end" scope="col">Ações</th>
+                    <th class="text-center" scope="col">Ações</th>
                 </tr>
             </thead>
             <tbody>
+                <?php foreach ($usuarios as $usuario): ?>
+
                 <tr>
-                    <th class="text-start" scope="row">1</th>
-                    <td class="text-center">Mark</td>
-                    <td class="text-center">Otto</td>
-                    <td class="text-center">@mdo</td>
-                    <td class="text-end">
+                    <th class="text-start" scope="row"><?= htmlspecialchars($usuario['id']) ?></th>
+                    <td class="text-center">
+                        <img src="<?= htmlspecialchars($usuario['foto']) ?>" alt="Foto de <?= htmlspecialchars($usuario['foto']) ?>" class="img-fluid rounded" style="max-width: 50px; max-height: 50px;">  <!-- <tr> -->
+                    </td>
+                    <td class="text-center"><?= htmlspecialchars($usuario['nome']) ?></td>
+                    <td class="text-center"><?= htmlspecialchars($usuario['email']) ?></td>
+                    <td class="text-center">
                         <button class="btn btn-warning">
                             <i class="bi bi-pencil-square"></i>
                         </button>
@@ -29,34 +33,7 @@
                         </button>
                     </td>
                 </tr>
-                <tr>
-                    <th class="text-start" scope="row">2</th>
-                    <td class="text-center">Jacob</td>
-                    <td class="text-center">Thornton</td>
-                    <td class="text-center">@fat</td>
-                    <td class="text-end">
-                        <button class="btn btn-warning">
-                            <i class="bi bi-pencil-square"></i>
-                        </button>
-                        <button class="btn btn-danger">
-                            <i class="bi bi-trash3"></i>
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <th class="text-start" scope="row">3</th>
-                    <td class="text-center">John</td>
-                    <td class="text-center">Doe</td>
-                    <td class="text-center">@social</td>
-                    <td class="text-end">
-                        <button class="btn btn-warning">
-                            <i class="bi bi-pencil-square"></i>
-                        </button>
-                        <button class="btn btn-danger">
-                            <i class="bi bi-trash3"></i>
-                        </button>
-                    </td>
-                </tr>
+                <?php endforeach; ?>
             </tbody>
         </table>
     </section>
