--- a/site/app/views/palestrantes/list.phtml
+++ b/site/app/views/palestrantes/list.phtml
@@ -2,7 +2,7 @@
     <section class="mt-4 p-4 border border-2 border-sucess rounded ">
         <div class="d-flex justify-content-between align-items-center">
             <h1 class=""><i class="bi bi-people-fill"></i> Palestrantes</h1>
-            <button class="btn btn-primary"><i class="bi bi-plus-lg"></i> Novo Palestrante</button>
+            <a href="add" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Novo Palestrante</a>
         </div>
         <table class="table table-striped table-hover ">
             <thead>
