--- a/site/app/views/palestrantes/list.phtml
+++ b/site/app/views/palestrantes/list.phtml
@@ -2,7 +2,7 @@
     <section class="mt-4 p-4 border border-2 border-sucess rounded ">
         <div class="d-flex justify-content-between align-items-center">
             <h1 class=""><i class="bi bi-people-fill"></i> Palestrantes</h1>
-            <a href="add" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Novo Palestrante</a>
+            <a href="cadastrar" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Novo Palestrante</a>
         </div>
         <table class="table table-striped table-hover ">
             <thead>
@@ -25,9 +25,9 @@
                     <td class="text-center"><?= htmlspecialchars($usuario['nome']) ?></td>
                     <td class="text-center"><?= htmlspecialchars($usuario['email']) ?></td>
                     <td class="text-center">
-                        <button class="btn btn-warning">
+                        <a href="editar/?id=<?= $usuario['id']?>"class="btn btn-warning">
                             <i class="bi bi-pencil-square"></i>
-                        </button>
+                        </a>
                         <button class="btn btn-danger">
                             <i class="bi bi-trash3"></i>
                         </button>
