--- a/site/app/views/usuarios/add.phtml
+++ b/site/app/views/usuarios/add.phtml
@@ -1,10 +1,43 @@
-<h1>Cadastrar usuario</h1>
+<section class="container pt-5 d-flex justify-content-center ">
+    <form action="" id="form" method="POST" class="w-50">
+        <h2>Cadastrar Usuário</h2>
+        <hr class="opacity-75 border border-1 w-25">  
 
-<hr>
+        <div class="mb-3 w-100">
+        <label class="form-label">Nome</label>
+        <input class="form-control" autocapitalize="words" id="name" required name="nome" type="text" placeholder="ex: joaozin da silva">
+    </div>
 
-<form action="">
+    <div class="mb-3 w-100">
+        <label class="form-label" for="">Data de Nascimento</label>
+        <input  class="form-control"  required name="date" type="date" placeholder="ex: https://img.example.com">
+    </div>
 
-    <input type="text" placeholder="Nome"><br>
-    <input type="text" placeholder="Email"><br>
-    <input type="text" placeholder="Senha"><br>
-</form>
+    <div class="mb-3 w-100">
+        <label class="form-label" for="">E-mail</label>
+        <input class="form-control" required name="email" type="email" placeholder="ex: joaozin@email.com">
+    </div>
+
+    <div class="mb-3 w-100">
+        <label class="form-label" for="">Senha</label>
+        <input class="form-control" required name="senha" type="password" placeholder="digite uma senha forte">
+    </div>
+    <button class="btn btn-primary" id="btn_cadastrar" disabled>Cadastrar</button>
+    </form>
+
+</section>
+
+<script src="/validations/validations.js"></script>
+<script>
+    const nameInput = document.getElementById("name");
+    const form = document.getElementById("form");
+    const btn = document.getElementById("btn_cadastrar");
+
+    nameInput.addEventListener("input", (e) => sanitazeName(e));
+    form.addEventListener("input", () => {
+        verificarForm(form, btn);
+    })
+
+
+
+</script>
