--- a/site/app/views/usuarios/list.phtml
+++ b/site/app/views/usuarios/list.phtml
@@ -1,76 +1,50 @@
-<h1>Listar usuarios</h1>
+<div class="container">
+    <section class="mt-4 p-4 border border-2 border-sucess rounded ">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1 class=""><i class="bi bi-people-fill"></i> Usuários</h1>
+            <a href="cadastrar" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Novo Usuário</a>
+        </div>
+        <table class="table table-striped table-hover ">
+            <thead>
+                <tr>
+                    <th class="text-start" scope="col">#</th>
+                    <th class="text-center" scope="col">Nome</th>
+                    <th class="text-center" scope="col">E-mail</th>
+                    <th class="text-center" scope="col">Data Nascimento</th>
+                    <th class="text-center" scope="col">Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <?php foreach ($usuarios as $usuario): ?>
 
-<hr>
+                <tr>
+                    <th class="text-start" scope="row"><?= htmlspecialchars($usuario['id']) ?></th>
+                    <td class="text-center"><?= htmlspecialchars($usuario['nome']) ?></td>
+                    <td class="text-center"><?= htmlspecialchars($usuario['email']) ?></td>
+                    <td class="text-center"><?= htmlspecialchars($usuario['data_nascimento']) ?></td>
+                    <td class="text-center">
+                        <a href="editar/?id=<?= $usuario['id']?>"class="btn btn-warning">
+                            <i class="bi bi-pencil-square"></i>
+                        </a>
+                        <button class="btn btn-danger" onclick="prepareDelete(<?= $usuario['id']?>)">
+                            <i class="bi bi-trash3"></i>
+                        </button>
+                    </td>
+                </tr>
+                <?php endforeach; ?>
+            </tbody>
+        </table>
+    </section>
+</div>
 
-<table>
-    <thead>
-    <tr>
-        <th>Titulo</th>
-        <th>Titulo</th>
-        <th>Titulo</th>
-        <th>Titulo</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    <tr>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-        <td>Texto</td>
-    </tr>
-    </tbody>
-</table>
+<script src="/validations/validations.js"> </script>
+
+<script>
+    const prepareDelete = (id) => {
+        
+        if(confirm("Tem certeza que deseja excluir este palestrante?")) {
+            confirmDelete('excluir/?id=<?=$id?>');
+        }
+    }
+
+</script>
