tela de editar usuário

--- a/site/app/views/usuarios/add.phtml
+++ b/site/app/views/usuarios/add.phtml
@@ -10,7 +10,7 @@
 
     <div class="mb-3 w-100">
         <label class="form-label" for="">Data de Nascimento</label>
-        <input  class="form-control"  required name="date" type="date" placeholder="ex: https://img.example.com">
+        <input  class="form-control"  required name="date" type="date">
     </div>
 
     <div class="mb-3 w-100">
