tela de deletar usuário

--- a/site/app/views/usuarios/list.phtml
+++ b/site/app/views/usuarios/list.phtml
@@ -38,12 +38,11 @@
 </div>
 
 <script src="/validations/validations.js"> </script>
-
 <script>
     const prepareDelete = (id) => {
         
         if(confirm("Tem certeza que deseja excluir este palestrante?")) {
-            confirmDelete('excluir/?id=<?=$id?>');
+            confirmDelete('excluir/?id='+id);
         }
     }
 
