--- a/site/app/views/palestrantes/add.phtml
+++ b/site/app/views/palestrantes/add.phtml
@@ -22,9 +22,8 @@
 
 </section>
 
-<script type="module">
-    import { sanitazeName, verificarForm } from '/validations/validations.js';
-
+<script src="/validations/validations.js"></script>
+<script>
     const nameInput = document.getElementById("name");
     const form = document.getElementById("form");
     const btn = document.getElementById("btn_cadastrar");
