crud com persistência no banco

--- a/site/app/views/palestrantes/edit.phtml
+++ b/site/app/views/palestrantes/edit.phtml
@@ -15,7 +15,7 @@
 
     <div class="mb-3 w-100">
         <label class="form-label" for="">Foto</label>
-        <input  class="form-control"  required name="foto" value="<?= $palestrante["foto"] ?> type="url" placeholder="ex: https://img.example.com">
+        <input  class="form-control"  required name="foto" value="<?= $palestrante["foto"] ?>" type="url" placeholder="ex: https://img.example.com">
     </div>
     <button class="btn btn-primary" id="btn_cadastrar" disabled>Atualizar</button>
     </form>
