crud de usuario com persistencia no banco

--- a/site/app/views/usuarios/add.phtml
+++ b/site/app/views/usuarios/add.phtml
@@ -7,11 +7,11 @@
         <label class="form-label">Nome</label>
         <input class="form-control" autocapitalize="words" id="name" required name="nome" type="text" placeholder="ex: joaozin da silva">
     </div>
-
+<!-- 
     <div class="mb-3 w-100">
         <label class="form-label" for="">Data de Nascimento</label>
         <input  class="form-control"  required name="date" type="date">
-    </div>
+    </div> -->
 
     <div class="mb-3 w-100">
         <label class="form-label" for="">E-mail</label>
