--- a/site/app/views/usuarios/list.phtml
+++ b/site/app/views/usuarios/list.phtml
@@ -10,18 +10,24 @@
                     <th class="text-start" scope="col">#</th>
                     <th class="text-center" scope="col">Nome</th>
                     <th class="text-center" scope="col">E-mail</th>
-                    <th class="text-center" scope="col">Data Nascimento</th>
+                    <!-- <th class="text-center" scope="col">Data Nascimento</th> -->
                     <th class="text-center" scope="col">Ações</th>
                 </tr>
             </thead>
             <tbody>
+         <?php if(count($usuarios) == 0): ?>
+                <tr>
+                    <td colspan="4" class="text-center">Nenhum usuário cadastrado</td>  
+                </tr>
+        
+                <?php else: ?>
                 <?php foreach ($usuarios as $usuario): ?>
 
                 <tr>
                     <th class="text-start" scope="row"><?= htmlspecialchars($usuario['id']) ?></th>
                     <td class="text-center"><?= htmlspecialchars($usuario['nome']) ?></td>
                     <td class="text-center"><?= htmlspecialchars($usuario['email']) ?></td>
-                    <td class="text-center"><?= htmlspecialchars($usuario['data_nascimento']) ?></td>
+                    <!-- <td class="text-center"><?= htmlspecialchars($usuario['data_nascimento']) ?></td> -->
                     <td class="text-center">
                         <a href="editar/?id=<?= $usuario['id']?>"class="btn btn-warning">
                             <i class="bi bi-pencil-square"></i>
@@ -32,6 +38,7 @@
                     </td>
                 </tr>
                 <?php endforeach; ?>
+                <?php endif; ?>
             </tbody>
         </table>
     </section>
