--- a/site/app/views/palestrantes/list.phtml
+++ b/site/app/views/palestrantes/list.phtml
@@ -17,6 +17,11 @@
                 </tr>
             </thead>
             <tbody>
+         <?php if(count($palestrantes) == 0): ?>
+                <tr>
+                    <td colspan="5" class="text-center">Nenhum palestrante cadastrado</td>
+                </tr>
+                <?php else: ?>
                 <?php foreach ($palestrantes as $palestrante): ?>
 
                 <tr>
@@ -36,6 +41,7 @@
                     </td>
                 </tr>
                 <?php endforeach; ?>
+                <?php endif; ?>
             </tbody>
         </table>
     </section>
