--- a/site/app/views/usuarios/edit.phtml
+++ b/site/app/views/usuarios/edit.phtml
@@ -9,13 +9,13 @@
     </div>
 
     <div class="mb-3 w-100">
-        <label class="form-label">Data de Nascimento</label>
-        <input  class="form-control"  required name="date" type="date" value="<?= $usuario["data_nascimento"] ?>">
+        <label class="form-label" for="">E-mail</label>
+        <input class="form-control" required name="email" value="<?= $usuario["email"] ?>" type="email" placeholder="ex: joaozin@email.com">
     </div>
 
     <div class="mb-3 w-100">
-        <label class="form-label" for="">E-mail</label>
-        <input class="form-control" required name="email" value="<?= $usuario["email"] ?>" type="email" placeholder="ex: joaozin@email.com">
+        <label class="form-label">Senha</label>
+        <input  class="form-control"  required name="senha" type="password" value="<?= $usuario["senha"] ?>">
     </div>
 
     <button class="btn btn-primary" id="btn_cadastrar" disabled>Atualizar</button>
